# rss-to-mastodon

./: LICENSE  README.md  fetch.py  last_post.txt  pyproject.toml  requirements.txt
.github/workflows/: main.yml
