[project]
name = "rss-to-mastodon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "blurhash==1.1.4",
    "certifi==2024.7.4",
    "charset-normalizer==2.1.0",
    "decorator==5.1.1",
    "feedparser==6.0.10",
    "idna==3.7",
    "mastodon-py==1.8.1",
    "python-dateutil==2.8.2",
    "python-magic==0.4.27",
    "pytz==2022.1",
    "requests==2.32.4",
    "sgmllib3k==1.0.0",
    "six==1.16.0",
    "urllib3==2.6.3",
]
