[project]
name = "rss-to-mastodon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "blurhash",
    "certifi",
    "charset-normalizer",
    "decorator",
    "feedparser",
    "idna",
    "mastodon-py",
    "python-dateutil",
    "python-magic",
    "pytz",
    "requests",
    "sgmllib3k",
    "six",
    "urllib3",
]
